--- a/main.html
+++ b/main.html
@@ -18,10 +18,10 @@
                 </div>
                 <div class="header__menu-nav">
                     <div class="header__menu-nav-flex">
-                        <h4 class="header__menu-h4 header__menu-nav-flex-element text__capitalize">Why alivio</h4>
-                        <h4 class="header__menu-h4 header__menu-nav-flex-element">Solutions</h4>
-                        <h4 class="header__menu-h4 header__menu-nav-flex-element">Community</h4>
-                        <h4 class="header__menu-h4 header__menu-nav-flex-element">Pricing</h4>
+                        <a href="#Why Alivio" class="href"><h4 class="header__menu-h4 header__menu-nav-flex-element text__capitalize">Why alivio</h4></a>
+                        <a href="#Solutions" class="href"><h4 class="header__menu-h4 header__menu-nav-flex-element">Solutions</h4></a>
+                        <a href="#Community" class="href"><h4 class="header__menu-h4 header__menu-nav-flex-element">Community</h4></a>
+                        <a href="#Pricing" class="href"><h4 class="header__menu-h4 header__menu-nav-flex-element">Pricing</h4></a>
                     </div>
                 </div>
                 <div class="header__menu-btns">
@@ -32,7 +32,7 @@
                 </div>
             </div>
         </div>
-        <div class="header__container">
+        <div class="header__container"  id="Why Alivio">
             <div class="header__wrapper">
                 <h1 class="header__h1 text-green">Be aware,<br>Manage well</h1>
                 <p class="header__p">Everyone experiences stress in different ways.
@@ -43,7 +43,7 @@
         </div>
     </header>
 
-    <section class="how-it-works">
+    <section class="how-it-works" id="Solutions">
         <div class="how-it-works__container m0-a">
             <h5 class="how-it-works__h5">How it works</h5>
             <div class="how-it-works__text">
@@ -84,7 +84,7 @@
         </div>
     </section>
     
-    <section class="about">
+    <section class="about" id="Community">
         <div class="about__container">
             <div class="about__text-container">
                 <h2 class="about__h2">Let's hear about Kayla's success story</h2>
@@ -97,7 +97,7 @@
         </div>
     </section>
 
-    <section class="our-clients">
+    <section class="our-clients" id="Pricing">
         <div class="our-clients__container">
             <img src="img/our-clients__Image.png" alt="" class="our-clients__img">
             <div class="our-clients__text-container">
@@ -124,10 +124,10 @@
     <footer class="footer">
         <div class="footer__container">
             <h3 class="footer__h3">Alivio</h3>
-            <h4 class="footer__h4">Why Alivio</h4>
-            <h4 class="footer__h4">Solutions</h4>
-            <h4 class="footer__h4">Community</h4>
-            <h4 class="footer__h4">Pricing</h4>
+            <a href="#Why Alivio" class="href"><h4 class="footer__h4">Why Alivio</h4></a>
+            <a href="#Solutions" class="href"><h4 class="footer__h4">Solutions</h4></a>
+            <a href="#Community" class="href"><h4 class="footer__h4">Community</h4></a>
+            <a href="#Pricing" class="href"><h4 class="footer__h4">Pricing</h4></a>
         </div>
     </footer>
 
